# herm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  docker-compose.test.yml  docker-compose.yml  requirements.txt
apps/aggregator/: main.cpp
apps/demo_client/: main.cpp
apps/demo_server/: main.cpp
apps/handler_client/: main.cpp
apps/mock_exchange_server/: main.cpp
apps/publisher/: main.cpp
config/: aggregator.json  demo_client.json  demo_server.json  handler_client.json  publisher.json  publisher_bbo.json  publisher_container_bbo.json  publisher_container_price_bands.json  publisher_container_volume_bands.json  publisher_price_bands.json  publisher_volume_bands.json
docker/aggregator/: Dockerfile
docker/base/: Dockerfile
docker/debug-apps/: Dockerfile
docker/debug-base/: Dockerfile
docker/mock_exchange/: Dockerfile
docker/publisher/: Dockerfile
docker/test/: Dockerfile
engine/aggregation/: CMakeLists.txt  aggregator_service.cpp  aggregator_service.hpp  market_data_manager.cpp  market_data_manager.hpp  order_book_processor.cpp  order_book_processor.hpp  order_book_resampler.cpp  order_book_resampler.hpp
engine/common/: CMakeLists.txt  application_kernel.cpp  application_kernel.hpp  config_manager.cpp  config_manager.hpp  cpu_pinning.cpp  cpu_pinning.hpp  event_thread.cpp  event_thread.hpp  grpc_server.cpp  grpc_server.hpp  instrument_registry.cpp  instrument_registry.hpp  rcu_ptr.hpp  rest_server.cpp  rest_server.hpp  thread_safe_object_pool.hpp  util.cpp  util.hpp
engine/exchange/: CMakeLists.txt  base_http_client.cpp  base_http_client.hpp  binance_futures_handler.cpp  binance_futures_handler.hpp  binance_http_client.cpp  binance_http_client.hpp  binance_spot_handler.cpp  binance_spot_handler.hpp  bybit_handler.cpp  bybit_handler.hpp  bybit_http_client.cpp  bybit_http_client.hpp  market_data_handler.cpp  market_data_handler.hpp  market_data_handler_factory.cpp  market_data_handler_factory.hpp  mock_handler.cpp  mock_handler.hpp  okx_handler.cpp  okx_handler.hpp  okx_http_client.cpp  okx_http_client.hpp  rate_limiter.cpp  rate_limiter.hpp  shared_connection.hpp
engine/market_data/: CMakeLists.txt  order_book.cpp  order_book.hpp  order_book_aggregator.cpp  order_book_aggregator.hpp
engine/mock/: CMakeLists.txt  mock_exchange.cpp  mock_exchange.hpp  mock_exchange_websocket.cpp  mock_exchange_websocket.hpp
engine/publishing/: CMakeLists.txt  order_book_json_converter.cpp  order_book_json_converter.hpp  publisher_service.cpp  publisher_service.hpp  publisher_strategy.hpp
proto/: demo.proto  market_data.proto
scripts/: build.sh  docker-build.sh  run-integration-tests.sh  setup_venv.sh  test.sh
static/: instruments.csv
tests/fixtures/: determined_orderbook.json
tests/integration/: testplan_e2e.py
tests/unit/: config_manager_test.cpp  event_thread_test.cpp  instrument_registry_test.cpp  market_data_handler_factory_test.cpp  mock_exchange_test.cpp  order_book_aggregator_test.cpp  order_book_json_converter_test.cpp  (+5 more)
(+22 files in other folders)
